style: ajustar formatação em EmprestimoController, FornecedorRepository e testes unitários